.metadata/.plugins/org.eclipse.cdt.ui/encender led.build.log
14:36:27 **** Incremental Build of configuration Debug for project encender led ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F429xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:115:55: error: 'USER_Btn_Pin' undeclared (first use in this function)
  115 |                 User_Button = HAL_GPIO_ReadPin(GPIOC, USER_Btn_Pin);
      |                                                       ^~~~~~~~~~~~
../Core/Src/main.c:115:55: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c: In function 'MX_ETH_Init':
../Core/Src/main.c:222:3: warning: implicit declaration of function 'memset' [-Wimplicit-function-declaration]
  222 |   memset(&TxConfig, 0 , sizeof(ETH_TxPacketConfig));
      |   ^~~~~~
../Core/Src/main.c:21:1: note: include '<string.h>' or provide a declaration of 'memset'
   20 | #include "main.h"
  +++ |+#include <string.h>
   21 | 
../Core/Src/main.c:222:3: warning: incompatible implicit declaration of built-in function 'memset' [-Wbuiltin-declaration-mismatch]
  222 |   memset(&TxConfig, 0 , sizeof(ETH_TxPacketConfig));
      |   ^~~~~~
../Core/Src/main.c:222:3: note: include '<string.h>' or provide a declaration of 'memset'
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

14:36:27 Build Failed. 2 errors, 2 warnings. (took 405ms)

